...
                    label = 'Home';
                } else if (route.name === 'CalendarTab') {
                    icon = '📅';
                    label = 'Calendar';
                } else if (route.name === 'FeedTab') {
                    icon = '📬';
                    label = 'Feed';
                } else if (route.name === 'GroupsTab') {
                    icon = '👥';
                    label = 'Collaborate';
                }

                return (
...
